--- a/13_bisections_newton.ipynb
+++ b/13_bisections_newton.ipynb
@@ -8,7 +8,7 @@
     }
    },
    "source": [
-    "# ☕️ Two very important algorithms for solving equations"
+    "# ☕️ Numerical equation solving"
    ]
   },
   {
@@ -23,7 +23,7 @@
     "\n",
     "Description: Bisections and Newton-Raphson methods. Solving equations of one variable. Accuracy of solution. Rates of convergence.\n",
     "\n",
-    "[YouTube recording of the lecture](https://youtu.be/gUdYS5PmvWo)"
+    "[YouTube recording of this lecture](https://youtu.be/gUdYS5PmvWo) in the `Foundational of Computational Economics` course"
    ]
   },
   {
